# Canny_Edge

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cuda.cu  cuda.h  main.cpp  util.cpp  util.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_utils.cpp
tests/cuda/: CMakeLists.txt  test_cuda.cpp
tests/utils/: CMakeLists.txt  test_utils.cpp
